--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </ul>
         <div class="header__main-ham-menu-cont">
           <img src="icons/list.svg" alt="hamburger menu" class="header__main-ham-menu">
-          <img src="icons/xmark-solid.svg" alt="hamburger menu close" class="header__main-ham-menu-close d-none">
+          <img src="icons/xmark-solid.svg" alt="hamburger menu close" width="25" height="25" class="header__main-ham-menu-close d-none">
         </div>
       </div>
     </div>
@@ -61,7 +61,7 @@
     </div>
   </header>
 
-  <script src="burgerMenu.js"></script>
+  <script src="index.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
   </script>    
